header will now align itself correctly with main alements in both mobile and desktop views

--- a/style.css
+++ b/style.css
@@ -20,28 +20,28 @@ h6 {
   font-family: BhrHeaderFont, Trebuchet MS;
 }
 
-header > h1 {
-  font-size: 23px;
-  box-sizing: border-box;
-  max-width: 790px;
-  padding: 2px 10px 0px 10px;
-  margin: 0px auto 0px auto;
-  color: white;
-}
-
 header {
   position: sticky;
   position: -webkit-sticky;
   top: 0; /* required */
   background-color: #3b455e;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 0px 5px 0px;
   margin-bottom: 1px;
   z-index: 2;
 }
 
+header > h1 {
+  font-size: 23px;
+  box-sizing: border-box;
+  max-width: 780px;
+  padding: 2px 10px 0px 10px;
+  margin: 0px auto 0px auto;
+  color: white;
+}
+
 header nav {
   box-sizing: border-box;
-  max-width: 790px;
+  max-width: 780px;
   margin-left: auto;
   margin-right: auto;
   padding: 6px 10px 4px 10px;
@@ -121,7 +121,6 @@ th.textLeft {
   padding-right: 10px;
   margin-bottom: 20px;
   margin-right: auto;
-
   margin-left: auto;
 }
 
@@ -361,7 +360,9 @@ input[type="submit"] {
     max-width: 1020px;
   }
   header > h1,
-  header nav {
+  header > nav {
+    max-width: 1020px;
+    padding-left: 15px;
     max-width: 1020px;
   }
 }
